tests/ui/suggestions/many-type-ascription.stderr
error[E0658]: type ascription is experimental
  --> $DIR/many-type-ascription.rs:2:13
   |
LL |     let _ = 0: i32;
   |             ^^^^^^
   |
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information
   = help: add `#![feature(type_ascription)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
